<resources>
        <string name="rate_app_title">Rate our App</string>
        <string name="rate_app_message">If you like our app, please take a moment to rate it in play store!</string>
        <string name="dialog_app_rate">Rate App</string>
        <string name="dialog_ask_later">Later</string>
        <string name="dialog_your_feedback">Your Feedback</string>
    <string name="app_name">Al Kauther Water</string>
    <string name="title_activity_home1">Home1Activity</string>
    <string name="channel_name">channel1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>About Us</item>
        <item>Services</item>
        <item>Products</item>
        <item>Contact Us</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--
validation String
-->

    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="addresserror">Enter a valid address</string>
    <string name="messageerror">Enter a valid message</string>
    <string name="pincodeerror">Enter a valid pincode</string>
    <string name="quantityerror">Enter a valid quantity</string>

    <string name="lessthan2"><![CDATA[< 2]]></string>
    <string name="_0_03"><![CDATA[< 0.03]]></string>
    <string name="_1"><![CDATA[< 1]]></string>
    <string name="_10_ug_l"><![CDATA[< 10 ug/l]]></string>
    <string name="_0_004"><![CDATA[< 0.004]]></string>
    <string name="_0_04"><![CDATA[< 0.04]]></string>
</resources>
